hphp/hack/test/extended_reasons/class_subtyping_covariant.php.diff.exp
--- control

+++ test

@@ -1,15 +1,8 @@

 error: Typing[4110] Invalid argument [1]
 -> Expected Sub [2]
 -> But got Super [3]
-->   via this generic T1 [4]
 
 hphp/hack/test/extended_reasons/class_subtyping_covariant.php:14:14
-     3 | class MyA<+Tco, -Tcontra, Tinv> {}
-     4 | 
-[4]  5 | class MyC<+T1, T2> extends MyA<T1, Super, T2> {}
-     6 | 
-     7 | class Super {}
-     8 | 
      9 | class Sub extends Super {}
     10 | 
 [2] 11 | function takes_my_a(MyA<Sub, Super, Super> $_): void {}